syntax = "proto3";
option csharp_namespace = "gRPC_Project";
package first;


message Request	{
	string Content = 1;
}

message Response{
	string message = 1;
}

service FirstServiceDefinition{
	rpc Unary(Request) returns (Response);
	rpc ClientStream(stream Request) returns (Response);
	rpc ServerStream(Request) returns (stream Response);
	rpc BiDirectional(stream Request) returns (stream Response);
}